--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dompurify": "^3.2.0",
     "lodash": "^4.17.21",
+    "node-fetch": "^3.3.2",
     "nouislider": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
